# bip39key

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTES.md  Pipfile  README.md  devenv.nix  flake.nix  result  rust-toolchain.toml  shell.nix  test.bash  test.py
.github/workflows/: release.yml  rust.yml
docs/: Argon2id Parameters.md  Backward Compatibility.md  CLI Design.md  Future Work.md  HKDF Key Derivation.md  Migration Guide.md  Receipt System.md  bip39key v2 Design Doc.md  memo2key Design.md  memo2key Prior Art.md
scripts/: check-version.sh
src/: console.rs  keys.rs  main.rs  passphrase.rs  pgp.rs  pinentry.rs  seed.rs  ssh.rs  types.rs
test/: message-concatenated.gpg  message-electrum-concatenated.gpg  message-electrum.gpg  message-no-passphrase.gpg  message-prompt.gpg  message-with-passphrase.gpg  message-without-passphrase.gpg  test.py  with-passphrase.encrypted.gpg
tests/: integration.rs
