[package]
name = "bip39key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
sha2 = "0.10.2"
sha1 = "0.10.0"
tiny-bip39 = "0.8.2"
clap = { version = "3.1.13", features = ["derive"] }
rust-argon2 = "1.0.0"
base64 = "0.13.0"
textwrap = "0.7"
bcrypt-pbkdf = "0.9.0"
rand = { version = "0.8.5", features = ["getrandom"] }
aes = "0.8.1"
ctr = "0.9.1"
