[package]
name = "bip39key"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
anyhow = "1.0"
base64 = "0.13.0"
bcrypt-pbkdf = "0.9.0"
byteorder = "1.4.3"
cfb-mode = "0.8.1"
clap = { version = "3.1.13", features = ["derive"] }
ctr = "0.9.1"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
hmac-sha512 = "1.1.1"
pbkdf2 = "0.11.0"
rand = { version = "0.8.5", features = ["getrandom"] }
rust-argon2 = "1.0.0"
sha1 = "0.10.0"
sha2 = "0.10.2"
textwrap = "0.7"
tiny-bip39 = "0.8.2"
x25519-dalek = "1.2.0"
